--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.5.6</version>
+      <version>1.5.13</version>
     </dependency>
 
     <!--    HTTP request dependencies-->
@@ -135,7 +135,8 @@
     <dependency>
       <groupId>com.google.auth</groupId>
       <artifactId>google-auth-library-oauth2-http</artifactId>
-      <version>1.20.0</version> <!-- or latest -->
+      <version>1.20.0</version>
+      <optional>true</optional>
   </dependency>
 
     <!--    Testing dependencies-->
