--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
+>
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>3.1.3</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <relativePath /> <!-- lookup parent from repository -->
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.infisical</groupId>
@@ -32,7 +35,8 @@
   </developers>
   <scm>
     <connection>scm:git:git://github.com/infisical/java-sdk.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/infiscial/java-sdk.git</developerConnection>
+    <developerConnection
+    >scm:git:ssh://git@github.com/infiscial/java-sdk.git</developerConnection>
     <url>https://github.com/infisical/java-sdk/</url>
   </scm>
 
@@ -48,7 +52,12 @@
   </distributionManagement>
 
   <properties>
-    <maven.compiler.release>21</maven.compiler.release>
+    <maven.compiler.source>8</maven.compiler.source>
+    <maven.compiler.target>8</maven.compiler.target>
+    <maven.compiler.release>8</maven.compiler.release>
+
+
+    <!-- <maven.compiler.release>21</maven.compiler.release> -->
     <java.version>21</java.version>
     <okhttp-version>2.7.5</okhttp-version>
     <gson-version>2.8.9</gson-version>
@@ -82,20 +91,20 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-core</artifactId>
-      <version>1.5.19</version>
+      <version>1.3.14</version>
     </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>2.1.0-alpha1</version>
+      <version>2.0.9</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.5.19</version>
+      <version>1.3.14</version>
     </dependency>
 
     <!--    HTTP request dependencies-->
@@ -152,7 +161,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <release>21</release>
+          <release>8</release>
           <annotationProcessorPaths>
             <path>
               <groupId>org.projectlombok</groupId>
@@ -182,7 +191,7 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.11.0</version>
             <configuration>
-              <release>21</release>
+              <release>8</release>
               <annotationProcessorPaths>
                 <path>
                   <groupId>org.projectlombok</groupId>
@@ -235,7 +244,8 @@
                     <arg>--pinentry-mode</arg>
                     <arg>loopback</arg>
                   </gpgArguments>
-                  <passphrase>${env.MAVEN_GPG_PASSPHRASE}</passphrase> <!-- GPG passphrase from environment -->
+                  <passphrase
+                  >${env.MAVEN_GPG_PASSPHRASE}</passphrase> <!-- GPG passphrase from environment -->
                 </configuration>
               </execution>
             </executions>
