--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,8 @@ services:
     volumes:
       - .:/app
     working_dir: /app
-    # Run only unit tests (no real credentials). Full suite: mvn test with env set.
-    command: mvn test -Dtest=ProjectsClientTest,AwsAuthProviderTest
+    # Run only unit tests (no real credentials). Full suite: mvn test -q with env set.
+    command: mvn test -Dtest=RevokeTokenInputTest,AuthClientTest,AwsAuthProviderTest,ProjectsClientTest
 
   format:
     image: cimg/openjdk:21.0
